[package]
name = "simd_rand"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = "none"
codegen-units = 1

[dependencies]
rand_core = "0.9"

[features]
default = ["specific"]
specific = []
portable = []

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# RNG constants are well-known hex values; separators hurt pattern recognition
unreadable_literal = "allow"
# Critical for SIMD codegen — these functions must be inlined
inline_always = "allow"
# Package metadata not needed yet
cargo_common_metadata = "allow"
# Seed From impls intentionally panic on invalid input
fallible_impl_from = "allow"
# SIMD code imports dozens of intrinsics; explicit imports would be unwieldy
wildcard_imports = "allow"

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
# packed_simd = { version = "0.3" }
num-traits = "0.2"
dhat = "0.3.3"
criterion = { version = "0.8", features = ["html_reports"] }
itertools = "0.14.0"
rand_xoshiro = "0.7.0"
rust_decimal = { version = "1.40.0", features = ["maths"] }
rust_decimal_macros = "1.40.0"

[lib]
bench = false

[[bench]]
name = "main"
harness = false
required-features = ["portable"]

[[example]]
name = "dasm"
path = "examples/_internal/dasm.rs"
bench = false
required-features = ["portable", "specific"]

[[example]]
name = "profile"
path = "examples/_internal/profile.rs"
bench = false
required-features = ["portable"]

[[example]]
name = "practrand"
path = "examples/_internal/practrand.rs"
bench = false
required-features = ["portable"]
