[package]
name = "simd_rand"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "SIMD-accelerated random number generators"
repository = "https://github.com/martinothamar/simd-rand"
homepage = "https://github.com/martinothamar/simd-rand"
readme = "README.md"
keywords = ["simd", "random", "rng", "avx2", "avx512"]
categories = ["algorithms", "no-std"]
exclude = ["examples/_internal/", "external/", "benches/", ".github/", ".vscode/", "AGENTS.md", "CLAUDE.md", "Makefile"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# portable feature requires nightly; avx2/avx512 modules need target features
rustc-args = ["--cfg", "docsrs", "-C", "target-feature=+avx2,+avx512f,+avx512dq,+avx512vl"]

[profile.release]
panic = "abort"
lto = true
opt-level = 3
debug = "none"
codegen-units = 1

[dependencies]
rand_core = "0.9"

[features]
default = ["specific"]
specific = []
portable = []

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# RNG constants are well-known hex values; separators hurt pattern recognition
unreadable_literal = "allow"
# Critical for SIMD codegen — these functions must be inlined
inline_always = "allow"
# Seed From impls intentionally panic on invalid input
fallible_impl_from = "allow"
# SIMD code imports dozens of intrinsics; explicit imports would be unwieldy
wildcard_imports = "allow"

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
# packed_simd = { version = "0.3" }
num-traits = "0.2"
dhat = "0.3.3"
criterion = { version = "0.8", features = ["html_reports"] }
itertools = "0.14.0"
rand_xoshiro = "0.7.0"
frand = "0.10"
rust_decimal = { version = "1.40.0", features = ["maths"] }
rust_decimal_macros = "1.40.0"

[lib]
bench = false

[[bench]]
name = "main"
harness = false
required-features = ["portable"]

[[example]]
name = "dasm"
path = "examples/_internal/dasm.rs"
bench = false
required-features = ["portable", "specific"]

[[example]]
name = "profile"
path = "examples/_internal/profile.rs"
bench = false
required-features = ["portable"]

[[example]]
name = "practrand"
path = "examples/_internal/practrand.rs"
bench = false
required-features = ["portable"]
